# MSBoot

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  bitbucket-pipelines.yml  build.bat  build.py  build.sh  burn.txt  cmake_header.txt  cppcheck_suppresion.txt  docker-compose.yml  gdb.txt  generate.bat  generate.sh  generate_tests.bat  generate_tests.sh  gnu-arm-none-eabi.cmake  install.sh  run.bat  sbs.py  stm32_flash.ld  stm32f4discovery.cfg  test.bat  test.sh
CMake/: McuToMcuFamily.cmake  STM32-Toolchain.cmake  STM32.cmake  Toolchain-STM32-CodeSourcery.cmake
CMake/Modules/: FindArmToolchain.cmake  FindSTLinkUtility.cmake  FindSTM32F10x.cmake  FindSTM32F4xx.cmake
build_system/: runner.py
build_system/builders/: builder.py  builder_factory.py  docker_builder.py  docker_builder_factory.py  docker_builders.py  native_builder.py  native_builder_factory.py  native_builders.py
cmake/: BoardToMcu.cmake  GitModules.cmake  McuFamilyToArch.cmake  STM32-Toolchain.cmake  STM32.cmake
cmake/Modules/: FindArmToolchain.cmake  FindSTM32F10x.cmake  FindSTM32F4xx.cmake
cmake/stm32/: McuToClass.cmake
doc/: App.plantuml  menu.txt  pinout.txt  requirements.org  todo.org
doc/diagrams/: device-info.txt  handshake.puml  handshake_sequence_bootloader.puml
inc/: ILogger.hpp  font.h  font5_8.h  font_project.txt  hw_utils.h  lcd.h  rgb_colors.h  sdram.h  usb.h  usbh_conf.h
lib/: CMakeLists.txt
lib/crcpp/: CMakeLists.txt
linker_scripts/: stm32f103c8t6.ld
linker_scripts/stm32/: stm32f103c8t6.ld  stm32f1xx_common.ld
lkr/: STM32F103C8Tx_FLASH.ld  stm32f103_128k.ld  stm32f407vg_flash.ld
scripts/: build.sh  check_env.sh  com_init.sh  generate.sh  generate_tests.sh  run.sh  run_target.sh  test_st.sh  test_ut.sh  usart_client.py
src/: CMakeLists.txt  bootloader.cpp  bootloader.hpp  buffer.hpp  config.hpp  defines.h  deviceInfoReader.cpp  deviceInfoReader.hpp  dfu.hpp  downloader.cpp  downloader.hpp  handshake.cpp  handshake.hpp  hw_utils.c  kernel.cpp  kernel.hpp  lcd.c  logger.cpp  logger.hpp  main.c  main.cpp  memoryManagement.cpp  memoryManagement.hpp  messageLoop.hpp  messages.cpp  messages.hpp  observer.hpp  readerWriterBuffer.hpp  sal.hpp  sdram.c  stm32f4_discovery.h  stm32f4xx_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  syscall.hpp  syscalls.c  syscalls.cpp  system_stm32f4xx.c  types.h  usart.cpp  (+9 more)
src/app/: CMakeLists.txt  app.cpp  app.hpp  context.hpp
src/bsp/: board.cpp  board.hpp  button.hpp  led.hpp  onewire.hpp  pwm.hpp  spi.hpp
src/bsp/Stm32_Black_Pill/: boardSpecific.cpp  button.cpp  led.cpp  onewire_stm32.cpp  pwm_stm32.cpp  spi.cpp
src/bsp/stm32_common/: syscall.hpp  syscalls.cpp
src/bsp/stm32f10x_common/: stm32f10x_conf.h  stm32f10x_it.cpp  stm32f10x_it.hpp  system_stm32f10x.c
src/bsp/stm32f1_common/: helpers.cpp  helpers.hpp
src/bsp/x86/: boardSpecific.cpp  button.cpp  led.cpp  onewire_x86.cpp  pwm_x86.cpp  spi.cpp  window.cpp  window.hpp
src/context/: CMakeLists.txt  context.cpp  context.hpp  fwd.hpp
src/core/: CMakeLists.txt  kernel.hpp  stdout_stream.hpp  time_provider.cpp  time_provider.hpp
src/hal/: CMakeLists.txt
src/hal/implementation/arm/stm32/common/: CMakeLists.txt  stm32_assert.c  stm32_assert.h
src/hal/implementation/arm/stm32/stm32f10x/core/: backupRegisters_stm32.cpp  core_stm32.cpp  criticalSection_stm32.cpp
src/hal/implementation/arm/stm32/stm32f10x/memory/: eeprom_stm32.cpp
src/hal/implementation/arm/stm32/stm32f10x/time/: rtc_stm32.cpp  sleep_stm32.cpp  time_stm32.cpp  watchdog_stm32.cpp
src/hal/implementation/arm/stm32/stm32f10x/utils/: assert_stm32.cpp
src/hal/implementation/x86/core/: backupRegisters_x86.cpp  core_x86.cpp  criticalSection_x86.cpp
src/hal/implementation/x86/memory/: eeprom_x86.cpp
src/hal/implementation/x86/time/: rtc_x86.cpp  sleep_x86.cpp  time_x86.cpp  watchdog_x86.cpp
src/hal/implementation/x86/utils/: assert_x86.cpp
src/hal/interface/core/: core.hpp  criticalSection.hpp
src/hal/interface/gpio/: pin.hpp
src/hal/interface/memory/: eeprom.hpp
src/hal/interface/time/: rtc.hpp  sleep.hpp  time.hpp  watchdog.hpp
src/hal/interface/utils/: assert.hpp
src/messages/: CMakeLists.txt  handshake.hpp
src/modules/: CMakeLists.txt  settings_module.hpp
src/modules/booting/: CMakeLists.txt  booting_events.hpp  booting_module.cpp  booting_module.hpp
src/modules/bootloader/: CMakeLists.txt  bootloader_events.hpp  bootloader_module.cpp  bootloader_module.hpp
src/modules/settings/: CMakeLists.txt  settings_module.cpp  settings_module.hpp
src/network/state_machine/: lcp.hpp  lcp_sm.hpp  ppp_sm.hpp
src/request/: CMakeLists.txt  control_byte.hpp  payload_receiver.cpp  payload_receiver.hpp  payload_transmitter.hpp
src/request/messages/: handshake.cpp  handshake.hpp  transmission.hpp
src/request/messages/control/: ack.hpp  messages_ids.hpp  nack.hpp
src/state_machine/: bootloader_sm.hpp  helpers.hpp  main_sm.hpp
test/: CMakeLists.txt
test/E2E/: CMakeLists.txt  onewireTests.cpp
test/ST/: .gitignore  dub.json  dub.selections.json  dub_platform_probe-a325838d-916e-4a1d-a321-8191a8c092ff.s  dub_platform_probe-b5b64b0b-d906-4079-98f0-d275d70d2c8e.s  msboot_system_tests  (+2 more)
test/UT/: CMakeLists.txt  empty.cpp  utilsTests.cpp
test/UT/containers/: staticVectorTests.cpp
test/UT/hw_stub/: common_mock.h  core_cm4.h  core_cmFunc.h  misc_mock.cpp  mock.hpp  stm32f4xx.h  stm32f4xx_gpio.cpp  stm32f4xx_rcc_mock.cpp  stm32f4xx_usart.h  stm32f4xx_usart_mock.cpp
test/UT/mocks/: comparators.hpp  core_mock.cpp  core_mock.hpp  expectation.hpp  flash_mock.cpp  flash_mock.hpp  gpio_comparators.cpp  gpio_mock.cpp  gpio_mock.hpp  misc_mock.cpp  misc_mock.hpp  mock.hpp  nvic_comparators.cpp  rcc_mock.cpp  rcc_mock.hpp  stringify.cpp  stringify.hpp  usart_mock.cpp  usart_mock.hpp
test/UT/request/: PayloadReceiverTests.cpp  PayloadTransmitterTests.cpp
test/UT/src/: app_tests.cpp  bootloader_tests.cpp  buffer_tests.cpp  logger_tests.cpp  reader_writer_buffer_tests.cpp  usart_downloader_tests.cpp  usart_tests.cpp
test/os_tests/: CMakeLists.txt  memoryTests.cpp
(+20 files in other folders)
